--- a/assets/style.css
+++ b/assets/style.css
@@ -90,10 +90,16 @@ header span {
 }
 
 .filme_img {
+    width: 10rem;
+    height: 10rem;
     margin: auto;
     border-radius: 100%;
     -webkit-box-shadow: 0px 0px 28px 5px rgba(0,0,0,0.28); 
     box-shadow: 0px 0px 28px 5px rgba(0,0,0,0.28);
+}
+
+.filme_informacoes {
+    margin-left: 1rem;
 }
 
 .filme-informacoes_quantitativas {
